# ChiaVec

./: .clang-format  CMakeLists.txt  Doxyfile  README.md
chiavec-sys/: build.rs
chiavec-sys/src/: lib.rs
doc/html/: allocators_8hpp_source.html  annotated.html  chiavecs_8h_source.html  classChiaVec_1_1CudaVec-members.html  classChiaVec_1_1CudaVec.html  classChiaVec_1_1CudaVec__inherit__graph.dot  classChiaVec_1_1Raw_1_1RawVec-members.html  classChiaVec_1_1Raw_1_1RawVec.html  classChiaVec_1_1Vec-members.html  classChiaVec_1_1Vec.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  inherit_graph_5.dot  inherit_graph_6.dot  inherit_graph_7.dot  inherit_graph_8.dot  inherit_graph_9.dot  inherits.html  menudata.js  rawvecs_8hpp_source.html  structChiaVec_1_1Memory_1_1BaseAllocator-members.html  structChiaVec_1_1Memory_1_1BaseAllocator.html  structChiaVec_1_1Memory_1_1DefaultAllocator-members.html  structChiaVec_1_1Memory_1_1DefaultAllocator.html  structChiaVec_1_1Memory_1_1DefaultAllocator__inherit__graph.dot  structChiaVec_1_1Memory_1_1DefaultCudaAllocator-members.html  structChiaVec_1_1Memory_1_1DefaultCudaAllocator.html  (+7 more)
doc/latex/: annotated.tex  (+15 more)
src/: CMakeLists.txt  allocators.cu  chiavecs.cu  utilities.cu
src/include/: allocators.hpp  chiavecs.h  rawvecs.hpp  types.hpp  utilities.hpp  vecs.hpp
(+39 files in other folders)
